--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "author": "Ian Henderson",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
+    "hyperscript-helpers": "^3.0.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-hyperscript": "^2.4.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^1.16.3"
   }
