--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.6",
     "hyperscript-helpers": "^3.0.2",
+    "object-path": "^0.11.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hyperscript": "^2.4.2",
